--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+    <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Blog preview card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
 
     </style>
 </head>
 <body>
     
-    
+    <div class="container">
+        <div class="card">
+            <div class="card-img"></div>
+            <div class="card-body">
+                <h3 class="tag">Learning</h3>
+                <h3 class="published-date">Published 21 Dec 2023</h3>
+                <h1 class="title">HTML & CSS foundations</h1>
+                <p class="card-paragraph">
+                    These languages are the backbone of every website, defining structure, content and presentation.
+                </p>
+            </div>
+            <div class="card-footer">
+                <div class="footer-pic"></div>
+                <div class="footer-name">Greg Hooper</div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="attribution">
