--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
     
     <div class="container">
         <div class="card">
-            <div class="card-img"></div>
-            <div class="card-body">
-                <h3 class="tag">Learning</h3>
-                <h3 class="published-date">Published 21 Dec 2023</h3>
-                <h1 class="title">HTML & CSS foundations</h1>
-                <p class="card-paragraph">
-                    These languages are the backbone of every website, defining structure, content and presentation.
-                </p>
-            </div>
-            <div class="card-footer">
-                <div class="footer-pic"></div>
-                <div class="footer-name">Greg Hooper</div>
+            <div class="card-contents">
+                <div class="card-img"></div>
+                <div class="card-body">
+                    <h3 class="tag">Learning</h3>
+                    <h3 class="published-date">Published 21 Dec 2023</h3>
+                    <h1 class="title">HTML & CSS foundations</h1>
+                    <p class="card-paragraph">
+                        These languages are the backbone of every website, defining structure, content and presentation.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="footer-pic"></div>
+                    <div class="footer-name">Greg Hooper</div>
+                </div>
             </div>
         </div>
     </div>
