--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 </div>
             </div>
         </div>
-    </div>
 
-
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        <div class="attribution">
+            <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+            <p>Coded by <a href="https://github.com/jambanix">Jambanix</a>.</p>
+        </div>
     </div>
+    
 </body>
 </html>
